# Lenia

./: :w  <  Cargo.toml  README.md
src/: convolution.rs  file.rs  growth.rs  imgep.rs  init.rs  learning.rs  main.rs  plot.rs  sdl.rs  write.rs
storage/: test.txt
storage/save/: init.txt  r_1.txt  r_2.txt  r_3.txt  s_1.txt  s_2.txt
