[package]
name = "elenia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convolutions-rs = "0.3.4"
ndarray = "0.15.6"
rand = "0.8.5"
rustfft = "6.2.0"
sdl2 = { version = "0.36.0", features = ["unsafe_textures"] }
