[package]
name = "elenia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.1"
convolutions-rs = "0.3.4"
ndarray = "0.15.6"
rand = "0.8.5"
rustfft = "6.2.0"
plotters = "0.3.3"
partial_application = "0.2.1"
sdl2 = { version = "0.36.0", features = ["unsafe_textures"] }
